test/libyul/yulSyntaxTests/invalid/invalid_debug_merge.yul
object "object" {
    code {
        /// @debug.merge {"HELLO": 2
    }
}
// ----
// SyntaxError 5721: (37-65): @debug.merge: Could not parse debug data: parse error at line 1, column 12: syntax error while parsing object - unexpected end of input; expected '}'
